2007-02-20  Tobias Burnus  <burnus@net-b.de>

PR fortran/30783
       * resolve.c (resolve_symbol): Add character dummy VALUE check.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@122156 138bc75d-0d04-0410-961f-82ee72b054a4